Fix alignment of logotype

--- a/css/default.scss
+++ b/css/default.scss
@@ -171,9 +171,12 @@ footer {
   margin-top: 2.0rem;
 }
 
+footer {
+  text-align: center;
+}
+
 footer p {
   font-size: smaller;
-  margin-bottom: 0.5rem;
   //color: rgba(white, 0.7);
 }
 
